# comp-501-book

./: .pre-commit-config.yaml  pyproject.toml
src/: conf.py  index.rst
src/chapters/: Lesson 15.rst  Lesson 16 The_Terminal.rst  Lesson 17.rst  Lesson 18.rst  Lesson 19.rst  Lesson15_converted.rst  Lesson16_converted.rst  Lesson_14_More_Practice_with_For_Loops.rst  Lesson_14_converted.md  Lesson_15.rst  Lesson_15_converted.md  Lesson_16_converted.md  Lesson_17_converted.md  Lesson_18_converted.md  Lesson_19_converted.md  Lesson_20_converted.md  Lesson_21_converted.md  Lesson_22_converted.md  Lesson_23_converted.md  Lesson_24_converted.md  Lesson_25_converted.md  Lesson_26_converted.md  lesson-2.rst  lesson14_output.rst  lesson15_output.rst
